Fixes graph/table toggle layout issue on the student detail page.  Renames the Homework column on the student list page to HW Completion for clarity.

--- a/src/components/directives/scatterplot/scatterplot.scss
+++ b/src/components/directives/scatterplot/scatterplot.scss
@@ -10,6 +10,9 @@
     position: absolute;
     bottom: 5px;
     left: 5px;
+    md-radio-button {
+      margin: 0px 5px;
+    }
   }
   h2 {
     text-align: center;
